# screentime

./: README.md  pyproject.toml  screentime.twb
data/: app_categories.csv  screentime1.csv  screentime10.csv  screentime13.csv  screentime15.csv  screentime4.csv  screentime5.csv  screentime7.csv  screentime8.csv
data/processed/: screentime_by_category.csv
data/raw/: app_categories.csv  screentime11.csv  screentime12.csv  screentime14.csv  screentime16.csv  screentime2.csv  screentime3.csv  screentime6.csv  screentime9.csv
results/: app_categories.csv  screentime.pptx  screentime.twbx  screentime_agg.csv  screentime_clean.csv
src/: screentime-cleaning.ipynb  screentime.twb
